--- a/codecheck.yml
+++ b/codecheck.yml
@@ -29,7 +29,7 @@ paper:
   authors:
     - name: Roger S. Bivand
       ORCID: 0000-0003-2392-6140
-  reference: TODO
+  reference: https://doi.org/10.1007/s10109-020-00336-0
 
 codechecker:
   - name: Daniel Nüst
